# notion-clone

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
docs/: SPEC.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/Editor/: BlockEditor.tsx  EditorArea.tsx  index.ts
src/components/GitHub/: GitHubPanel.tsx  index.ts
src/components/Search/: SearchModal.tsx
src/components/Sidebar/: Sidebar.tsx  SidebarItem.tsx  TrashSection.tsx
src/components/Terminal/: TerminalPanel.tsx  TerminalTab.tsx  index.ts
src/hooks/: usePages.ts  useTheme.ts
src/services/: database.ts  github.ts  markdown.ts
src/styles/: globals.css
src/types/: index.ts
